spacing fix

--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  font: 300 13px/18px "Open Sans", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: #337ae3;
+  text-decoration: none;
+}
+.container {
+  margin: 0 auto;
+  max-width: 900px 
+}
+table {
+  border: 1px solid #337ae3;
+  border-radius: 8px;
+  margin: 20px 0;
+  padding: 10px;
+  td, th {
+	padding: 2px 10px;
+  }
+  th {
+    font-weight: 500;
+    padding-bottom: 10px;
+    text-align: left;
+  }
+}
